*** WooCommerce API Manager PHP Library for Plugins and Themes Changelog ***

2026.nn.nn - version 2.12.0
* Feature: Allow requesting updates while the client library runs on a staging or local development environment

2025.06.09 - version 2.11.1
* Fix: Correctly output HTML links in API error messages
* Fix: Improve translatable activation information output

2025.06.04 - version 2.11.0
* New: Update the terminology in labels and text matching the latest API Manager version

2025.03.17 - version 2.10.0
* Tweak: Reduce the number of calls to the API server when loading activation settings pages
* Tweak: Allow passing the parent product ID to the client constructor (breaking change)
* Fix: Ensure not to call a WooCommerce-only function in the library
* Dev: Allow activation handling also on `plugins_loaded` rather than registration hook only
* Misc: Client library adheres to WordPress coding standards

2024.04.26 - version 2.9.3
* Tweak: Update brand to Kestrel
* Fix: Fix PHP warnings for certain failed update checks

2024.03.18 - version 2.9.2
* Fix: Set instance ID property after generating it
* New: Add wc_am_api_key_field_value filter to allow setting a default API key
* New: Add activate_new_key() method for programmatic activation of a new key

2023.08.14 - version 2.9.1
 * Fix: Process custom menu array using if > elseif > else rather than switch to fix PHP notices: Undefined index, Undefined array key.

2023.04.28 - version 2.9
 * New: Added ability to create custom menus and submenus for license/API key activation form.
 * New: Added activation stats, total activations, total purchased activations, total activations remaining.
 * New: Added activation error displayed from the store server during an unsuccessful activation attempt.
 * New: Added error message either from the store server or local server on the activation form to aid in troubleshooting.

2022.12.19 - version 2.8.2
 * Fix: Misspelled word in error message.