@@ -1,7 +1,8 @@
 *** WooCommerce API Manager PHP Library for Plugins and Themes Changelog ***
 
 2026.nn.nn - version 2.12.0
-* Feature: Allow requesting updates while the client library runs on a staging or local development environment
+* Tweak: Do not display the license activation prompt on staging sites
+* Misc: Ensure to always send the current site URL to improve handling of staging site activations and updates with the latest API Manager server versions
 
 2025.06.09 - version 2.11.1
 * Fix: Correctly output HTML links in API error messages
